deployment/minikube/customer-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api-deployment
  namespace: architecture-demo
spec:
  selector:
    matchLabels:
      app: customer-api-pod
  template:
    metadata:
      labels:
        app: customer-api-pod
    spec:
      containers:
      - name: customer-api-container
        image: architecture_demo/customer-api:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: customer-api-service
  namespace: architecture-demo
spec:
  type: ClusterIP
  selector:
    app: customer-api-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
