deployment/minikube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: architecture-demo
spec:
  selector:
    matchLabels:
      app: frontend-pod
  template:
    metadata:
      labels:
        app: frontend-pod
    spec:
      containers:
      - name: frontend-container
        image: architecture_demo/frontend:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: architecture-demo
spec:
  type: ClusterIP
  selector:
    app: frontend-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
