deployment/minikube/sqlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sqlserver
  namespace: architecture-demo
spec:
  selector:
    matchLabels:
      app: sqlserver-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: sqlserver-pod
    spec:
      containers:
      - name: sqlserver-container
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: "/var/opt/mssql/data"
          name: sqldata-storage
      volumes:
      - name: sqldata-storage
        persistentVolumeClaim:
          claimName: sqlserver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: architecture-demo
spec:
  selector:
    app: sqlserver-pod
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
