deployment/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: architecture-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - secretName: architecture-demo-tls
    hosts:
      - "architecture-demo.info"
  rules:
    - host: architecture-demo.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /customer-api/(.*)
            pathType: Prefix
            backend:
              service:
                name: customer-api-service
                port:
                  number: 80
          - path: /order-api/(.*)
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 80
